--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
+    <h1>BINGO</h1>
     <script src="assets/script.js"></script>
   </body>
 </html>
